syntax = "proto3";

option go_package = "github.com/hsmtkk/literate-barnacle/proto/room";

package room;

service RoomService {
  rpc DummyList(DummyListRequest) returns (DummyListResponse){}
  rpc Create(CreateReqeust) returns (CreateResponse){}
}

message NewRoom {
  string name = 1;
}

message Room {
  int64 id = 1;
  string name = 2;
}

message DummyListRequest {
}

message DummyListResponse {
  repeated Room rooms = 1;
}

message CreateReqeust {
  NewRoom room = 1;
}

message CreateResponse {
  Room room = 1;
}
